--- a/referencias.css
+++ b/referencias.css
@@ -53,10 +53,13 @@ main{
     text-align: center;
     margin: 1% 30%;
     padding: 1%;
-    box-shadow: black 4px 4px 5px;
+    border: black 0.5px solid;
+    border-radius: 10px;
+
 }
 #text:hover{
     background-color: #244BD8;
+    box-shadow: black 5px 5px 7px;
 }
 footer{
     background-color: #112264;
