--- a/sobre.css
+++ b/sobre.css
@@ -59,7 +59,8 @@ article{
 #redes{
     display: flex;
     justify-content: space-around;
-    padding-left: 15%;
+    padding-left: 20%;
+    padding-right: 5%;
     
 }
 #rede{
