--- a/contato.css
+++ b/contato.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'Baloo Tammudu 2', cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0;
     margin: 0 ;
     color: white;
